update file name

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,7 @@ ARG KEYCLOAK_IMAGE
 
 FROM $KEYCLOAK_IMAGE
 USER root
-COPY assets/*.jar /opt/keycloak/providers/app.jar
+COPY assets/keycloak-rest-provider.jar /opt/keycloak/providers/keycloak-rest-provider.jar
 USER 1000
 
 ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start-dev"]
