--- a/docker/.env
+++ b/docker/.env
@@ -8,3 +8,5 @@ SONAR_CONFIG_VERSION=3.13.5
 SONAR_USER=admin
 SONAR_PASSWORD=admin
 SONAR_URL=sonarqube:9000
+
+INTEGRATION_URL=http://host.docker.internal:8070
