--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,7 @@ ARG KEYCLOAK_IMAGE
 
 FROM $KEYCLOAK_IMAGE
 USER root
-COPY assets/keycloak-rest-provider-1.0.1-SNAPSHOT.jar /opt/keycloak/providers/keycloak-rest-provider.jar
+COPY assets/keycloak-rest-provider.jar /opt/keycloak/providers/keycloak-rest-provider.jar
 COPY assets/vnm-keycloak-theme  /opt/keycloak/themes/vnm-keycloak-theme
 USER 1001
 ENTRYPOINT [ "/opt/bitnami/scripts/keycloak/entrypoint.sh" ]
