update docker file

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,21 @@
 ARG KEYCLOAK_IMAGE
+ARG MAVEN_IMAGE
 
-FROM $KEYCLOAK_IMAGE
+FROM maven:3.9.2-eclipse-temurin-17 as builder
+COPY pom.xml /tmp/
+COPY src /tmp/src
+WORKDIR /tmp/
+RUN mvn clean package
+
+FROM keycloak/keycloak:21.0
 USER root
-COPY assets/keycloak-rest-provider.jar /opt/bitnami/keycloak/providers/keycloak-rest-provider.jar
-COPY assets/vnm-keycloak-theme  /opt/bitnami/keycloak/themes/vnm-keycloak-theme
+COPY --from=builder /tmp/target/*.jar /opt/keycloak/providers/app.jar
+
+COPY docker/assets/vnm-keycloak-theme  /opt/keycloak/themes/vnm-keycloak-theme
+
+
 USER 1001
-ENTRYPOINT [ "/opt/bitnami/scripts/keycloak/entrypoint.sh" ]
-CMD [ "/opt/bitnami/scripts/keycloak/run.sh" ]
+
+ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "build", "--spi-email-sender-provider=customSendEmail", "--spi-email-sender-default-enabled=false"]
+
+ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start", "--spi-email-sender-provider=customSendEmail", "--spi-email-sender-default-enabled=false"]
