update docker file

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,15 +1,9 @@
 ARG KEYCLOAK_IMAGE
-ARG MAVEN_IMAGE
 
-FROM keycloak/keycloak:21.0
+FROM $KEYCLOAK_IMAGE
 USER root
-
-COPY assets/keycloak-rest-provider.jar /opt/bitnami/keycloak/providers/keycloak-rest-provider.jar
+COPY assets/keycloak-rest-provider-SNAPSHOT.jar /opt/bitnami/keycloak/providers/keycloak-rest-provider.jar
 COPY assets/vnm-keycloak-theme  /opt/bitnami/keycloak/themes/vnm-keycloak-theme
-
-
 USER 1001
-
-ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "build", "--spi-email-sender-provider=customSendEmail", "--spi-email-sender-default-enabled=false"]
-
-ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start", "--spi-email-sender-provider=customSendEmail", "--spi-email-sender-default-enabled=false"]
+ENTRYPOINT [ "/opt/bitnami/scripts/keycloak/entrypoint.sh" ]
+CMD [ "/opt/bitnami/scripts/keycloak/run.sh" ]
