update docker file

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,17 +1,11 @@
 ARG KEYCLOAK_IMAGE
 ARG MAVEN_IMAGE
 
-FROM maven:3.9.2-eclipse-temurin-17 as builder
-COPY pom.xml /tmp/
-COPY src /tmp/src
-WORKDIR /tmp/
-RUN mvn clean package
-
 FROM keycloak/keycloak:21.0
 USER root
-COPY --from=builder /tmp/target/*.jar /opt/keycloak/providers/app.jar
 
-COPY docker/assets/vnm-keycloak-theme  /opt/keycloak/themes/vnm-keycloak-theme
+COPY assets/keycloak-rest-provider.jar /opt/bitnami/keycloak/providers/keycloak-rest-provider.jar
+COPY assets/vnm-keycloak-theme  /opt/bitnami/keycloak/themes/vnm-keycloak-theme
 
 
 USER 1000
