update docker build

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,8 @@
 FROM keycloak/keycloak:21.0
 USER root
 
-COPY docker/assets/keycloak-rest-provider.jar /opt/keycloak/providers/keycloak-rest-provider.jar
-COPY docker/assets/vnm-keycloak-theme  /opt/keycloak/themes/vnm-keycloak-theme
+COPY ./docker/assets/keycloak-rest-provider.jar /opt/keycloak/providers/keycloak-rest-provider.jar
+COPY ./docker/assets/vnm-keycloak-theme  /opt/keycloak/themes/vnm-keycloak-theme
 
 USER 1000
 
