--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,6 +6,6 @@ COPY assets/vnm-keycloak-theme  /opt/keycloak/themes/vnm-keycloak-theme
 
 USER 1000
 
-ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "build", "--spi-email-sender-provider=customSendEmail", "--spi-email-sender-default-enabled=false"]
+ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "build"]
 
-ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start-dev", "--spi-email-sender-provider=customSendEmail", "--spi-email-sender-default-enabled=false"]
+ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start-dev"]
