--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   keycloak:
     build:
       context: ../
-      dockerfile: docker/Dockerfile
+      dockerfile: docker/keycloak/Dockerfile
       args:
         - KEYCLOAK_IMAGE=${KEYCLOAK_IMAGE}
         - MAVEN_IMAGE=${MAVEN_IMAGE}
